Documentation and theme fixes

--- a/documentation/components/components-treegrid.asciidoc
+++ b/documentation/components/components-treegrid.asciidoc
@@ -98,7 +98,7 @@ treeGrid.setHierarchyColumn("name");
 [classname]#TreeGrid# supports setting a callback method that can allow or prevent the user from collapsing an expanded node.
 It can be set with [methodname]#setItemCollapseAllowedProvider# method, that takes a [classname]#SerializablePredicate#.
 
-Avoid doing any heavy operations in the method, since it is called for each item when it's being sent to the client.
+Avoid doing any heavy operations in the method, since it is called for each item when it is being sent to the client.
 
 Example using a predefined set of persons that can not be collapsed:
 [source, java]
